# numerical-analysis

lab2/: EFG.txt  FIXES.md  pyproject.toml  result.txt
lab2/presets/: system.txt
lab2/src/: gui.py  main.py  types_.py
lab2/src/converters/: dec.py
lab2/src/equation/: data.py  methods_enum.py  model.py  result.py
lab2/src/equation/methods/: __init__.py  chord.py  method.py  newton.py  simple_iterations.py
lab2/src/system/: data.py  methods_enum.py  model.py  result.py
lab2/src/system/methods/: __init__.py  method.py  newton.py
lab3/: Makefile  pyproject.toml
lab3/presets/: discontinuity.json  rectangle.json  simpson.json  trapezoid.json
lab3/src/: config.py  logger.py  main.py
lab3/src/commands/: __init__.py  integral.py
lab3/src/commands/args/: __init__.py  integral.py
lab3/src/methods/: __init__.py  method.py  rectangle.py  simpson.py  trapezoid.py
lab3/src/models/: discontinuity.py  integral.py  response.py
lab4/server/: pyproject.toml
lab4/server/src/: config.py  main.py
lab4/server/src/libs/approximation/: main_tmp.py
lab4/server/src/libs/approximation/methods/: __init__.py  cubic.py  exponential.py  linear.py  logarithmic.py  power.py  quadratic.py
lab4/server/src/libs/approximation/models/: result.py  validation.py
lab4/server/src/libs/approximation/utils/: statistic.py  system.py
lab4/server/src/libs/interpolation/methods/: __init__.py  lagrange.py  newton_dd.py  newton_fd.py  stirling_point.py
lab4/server/src/libs/interpolation/models/: result.py  validation.py
lab4/server/src/libs/interpolation/utils/: converter.py
lab4/server/src/routers/: __init__.py  approximation.py  interpolation.py
lab4/server/src/schemas/: approximation.py  interpolation.py
lab4/server/src/services/: approximation.py  interpolation.py
lab6/: .ruff.toml  pyproject.toml
lab6/src/: __init__.py
lab6/src/data/: function_data.py
lab6/src/libs/ode/: main.py  types.py
lab6/src/libs/ode/methods/: adams.py  euler.py  runge_kutta_4_order.py
lab6/src/libs/ode/methods/core/: enums.py  (+3 more)
lab6/src/models/: function_data.py
lab6/src/schemas/: ode.py
lab6/src/services/: ode_service.py
lab6/src/ui/: main_window.py  styles.py
lab6/src/ui/components/: control_panel.py  function_selector.py  method_selector.py  numeric_input.py  plot_widget.py  results_table.py
lab6/src/ui/utils/: alert.py
(+101 files in other folders)
