[tool.poetry]
name = "lab6"
version = "0.1.0"
description = "Numerical Analysis - Lab #6"
authors = ["Kirill Ankudinov <kirill.ankudinov.94@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.5"
pyqt5 = "^5.15.11"
scipy = "^1.15.3"
matplotlib = "^3.10.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.10"
scipy-stubs = "^1.15.3.0"
mypy-dev = "^1.16.0a9"
pyqt5-stubs = "^5.15.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
strict = true
disallow_untyped_calls = false
namespace_packages = true

# [[tool.mypy.overrides]]
# module = "PyQt5.*"
# ignore_missing_imports = false

[tool.pytest.ini_options]
pythonpath = ["src"]
