[tool.poetry]
name = "lab4-server"
version = "0.1.0"
description = "Numerical Analysis - Lab #4 - Server"
authors = ["Kirill Ankudinov <kirill.ankudinov.94@mail.ru>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.12"}
numpy = "^2.2.4"
sympy = "^1.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
strict = true
disallow_untyped_calls = false


[tool.pytest.ini_options]
pythonpath = ["server/src"]